web_server/deployment/app-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-green-deployment
  labels:
    app: flask-deployment
    version: green
spec:
  replicas: 3  # Number of replicas
  selector:
    matchLabels:
      app: flask-deployment
      version: green
  template:
    metadata:
      labels:
        app: flask-deployment
        version: green
    spec:
      containers:
        - name: flask-app
          image: flask_app:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "2"
          ports:
            - containerPort: 5000  # Flask app internal port
          livenessProbe:
            httpGet:
              path: /status
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
