web_server/deployment/app-deployment-rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask-deployment
    version: blue
spec:
  replicas: 3  # Number of replicas
  selector:
    matchLabels:
      app: flask-deployment
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1  # Max pods that can be unavailable during update
      maxSurge: 1        # Max extra pods above desired replicas during update
  template:
    metadata:
      labels:
        app: flask-deployment
        version: blue
    spec:
      containers:
        - name: flask-app
          image: flask_app:v1.0
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "2"
          ports:
            - containerPort: 5000  # Flask app internal port
          livenessProbe:
            httpGet:
              path: /status
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
