web_server/deployment/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask-deployment
spec:
  replicas: 3  # Number of replicas
  selector:
    matchLabels:
      app: flask-deployment
  template:
    metadata:
      labels:
        app: flask-deployment
    spec:
      containers:
        - name: flask-app
          image: flask_app:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "2"
          ports:
            - containerPort: 5000  # Flask app internal port
