web_server/deployment/app-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-deployment
    version: blue
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
