web_server/deployment/app-network-policy.yaml
# Network Policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-deployment-netpol
spec:
  podSelector: 
    matchLabels:
      app: flask-deployment
      version: blue
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx-pod
    ports:
    - protocol: TCP
      port: 5000
  egress: 
  - to:
    - podSelector:
        matchLabels:
          app: mongodb-deployment
    ports:
    - protocol: TCP
      port: 27017
  - to:
    - namespaceSelector:
        matchLabels:
          "kubernetes.io/metadata.name": "kube-system"
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
